--- a/_i18n/zh-TW/_posts/2022-06-29-Web3-的靈魂-SBT-憑證.md
+++ b/_i18n/zh-TW/_posts/2022-06-29-Web3-的靈魂-SBT-憑證.md
@@ -16,7 +16,7 @@ tags:
 
 遊戲往往為現實世界提出豐富的創意，那麼剛剛開展的 web3 世界，是否也可能採行同樣的規則？寶物為個別玩家提供優勢，但若要真正取得勝利，則要靠玩家組成的公會，來組隊打怪。正如 DeSoc 論文中所指出，靈魂綁定憑證（Soulbound tokens）同時也是「社群綁定憑證」，也就是團體參與的象徵。
 
-近年來，各種「虛擬幣」和 NFT 的炒作甚囂塵上。然而，只能匿名交易、沒有社群參與的狀態，等於變相鼓勵人性的貪婪，無論是虛擬資產捲款遣逃、帳號被駭事件，或是號稱「空投」實為詐騙的分身攻擊、吸血攻擊等等，至今仍時有所聞。
+近年來，各種「虛擬幣」和 NFT 的炒作甚囂塵上。然而，只能匿名交易、沒有社群參與的狀態，等於變相鼓勵人性的貪婪，無論是虛擬資產捲款潛逃、帳號被駭事件，或是號稱「空投」實為詐騙的分身攻擊、吸血攻擊等等，至今仍時有所聞。
 
 這篇論文提出這些問題的解方，也就是綁定於個人或組織的「靈魂（Soul）」帳號，而 SBT 則是其中蒐集的徽章，代表社群認可的貢獻紀綠，一旦同意鑄造後，就無法交給別人。
 
