* add cc: "site.cc-by-nc-nd" for en cw

--- a/_i18n/en/_posts/2021-10-29-ESG-永續與影響力投資.md
+++ b/_i18n/en/_posts/2021-10-29-ESG-永續與影響力投資.md
@@ -7,6 +7,7 @@
   category: "blog"
   tags: 
     - "Social Innovation"
+  cc: "site.cc-by-nc-nd"
 ---
 
 [In my last column](https://pdis.nat.gov.tw/en/blog/%E7%96%AB%E5%BE%8C%E6%8C%AF%E8%88%88-%E4%BA%BA%E4%BA%BA%E6%9C%89%E3%84%97%E3%84%9C%CB%8A/), I introduced the "Quintuple Stimulus Voucher." By the end of October, the total number of paper and digital vouchers issued exceeded 19 million. Now that pandemic control measures are gradually easing, shops around Taiwan are filled with customers.
