--- a/_i18n/en/_posts/2021-11-26-群眾智造-共享創新.md
+++ b/_i18n/en/_posts/2021-11-26-群眾智造-共享創新.md
@@ -7,6 +7,7 @@
   category: "blog"
   tags: 
     - "Social Innovation"
+  cc: "site.cc-by-nc-nd"
 ---
 
 In the fall 2021 issue of "Stanford Social Innovation Review", Professors Johanna Mair and Thomas Gegenhuber, both from Germany, stated that amidst severe challenges brought about by COVID-19, humankind needs a pragmatic, flexible and large-scale model for reinvigorating societal infrastructure. They highlighted the "need to experiment with social innovation based on collective action facilitated by digital technology."
