--- a/_i18n/en/_posts/2022-02-24-APSIPA-亞太社會創新合作獎.md
+++ b/_i18n/en/_posts/2022-02-24-APSIPA-亞太社會創新合作獎.md
@@ -3,10 +3,11 @@
   title: "APSIPA: Asia Pacific Social Innovation Partnership Award"
   excerpt: "With the theme of \"Human-Oriented\", the Special Jury Award encourages the team to put the focus back on \"people\"."
   image: "/assets/imgs/apsipa.jpg"
-  author: "唐鳳、彭筱婷"
+  author: "Audrey Tang, Sheau-Tyng Peng"
   category: "blog"
   tags: 
-    - "社會創新"
+    - "Social Innovation"
+  cc: "site.cc-by-nc-nd"
 ---
 
 
