--- a/_i18n/en/_posts/2022-04-01-國際松-淨零合作-永續未來.md
+++ b/_i18n/en/_posts/2022-04-01-國際松-淨零合作-永續未來.md
@@ -7,6 +7,7 @@
   category: "blog"
   tags: 
     - "Social Innovation"
+  cc: "site.cc-by-nc-nd"
 ---
 
 Presidential Hackathon [International](https://presidential-hackathon.taiwan.gov.tw/en/international-track/) began in 2019 and is in its fourth year. So far, civic hackers from 36 countries have taken part in this special event. As the name suggests, the purpose of PHI is to invite civic hackers to come up with global solutions using open data. From the preliminary round to the final, the results of collaborative efforts are assessed by the review committee, with the best and brightest invited to the Presidential Office to take part in an award ceremony. Over the years, PHI has created a platform of free exchange for those keen to connect, promote great ideas and have the chance to implement in other parts of the world. If one wishes to collaborate and realize brilliant ideas with like-minded friends at home and abroad, PHI is the only game in town.
