--- a/_i18n/en/_posts/2022-06-29-Web3-的靈魂-SBT-憑證.md
+++ b/_i18n/en/_posts/2022-06-29-Web3-的靈魂-SBT-憑證.md
@@ -7,6 +7,7 @@
   category: "blog"
   tags: 
     - "Social Innovation"
+  cc: "site.cc-by-nc-nd"
 ---
 
 What exactly are “soulbound tokens” (SBTs)? This new concept, stemming from non-fungible tokens (NFTs), is poised to change the web3 world. In [my recent #InnoMinds video podcast](https://www.youtube.com/watch?v=jp1L-DGYnJA), Ethereum co-founder Vitalik Buterin shared his thoughts on digital communities and free speech. He also [elaborated on SBTs](https://youtu.be/jp1L-DGYnJA?t=2389), the core of the paper [Decentralized Society: Finding Web3’s Soul (DeSoc)](https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4105763), which he co-authored with RadicalxChange founder Glen Weyl and Flashbots’ Strategist Puja Ohlhaver this past May.
