--- a/_i18n/en/_posts/2022-07-06-海洋國家，開放水域.md
+++ b/_i18n/en/_posts/2022-07-06-海洋國家，開放水域.md
@@ -3,11 +3,11 @@
   title: "Ocean State, Open Water"
   excerpt: "Let's go to the water and the sea together!"
   image: "https://image.cache.storm.mg/styles/smg-800x533-fp/s3/media/image/2022/07/04/20220704-023639_U1004_M774171_8803.jpg"
-  author: "唐鳳、周詳"
+  author: "Audrey Tang, Sean Chou"
   category: "blog"
   tags: 
-    - "開放政府"
-    - "協作會議"
+    - "Open Government"
+    - "Collaborative Meeting"
 ---
 
 
