--- a/_i18n/en/_posts/2022-07-07-「如何」開放才重要.md
+++ b/_i18n/en/_posts/2022-07-07-「如何」開放才重要.md
@@ -1,13 +1,13 @@
 ---
   layout: "post"
-  title: "\"How\" is open is important"
+  title: "\"How\" to open is important"
   excerpt: "Being able to focus on issues and be realistic is the responsible approach."
   image: "/assets/imgs/beach-2836300_1280.jpg"
-  author: "唐鳳、詹壹雯"
+  author: "Audrey Tang, Yi-Wen Chan"
   category: "blog"
   tags: 
-    - "開放政府"
-    - "協作會議"
+    - "Open Government"
+    - "Collaborative Meeting"
 ---
 
 
