--- a/_i18n/en/_posts/2022-07-06-海洋國家，開放水域.md
+++ b/_i18n/en/_posts/2022-07-06-海洋國家，開放水域.md
@@ -11,7 +11,7 @@
 ---
 
 
-Recently, the Join platform has two co-signatures on open water issues, which have been voted and passed, and a collaboration meeting will be held. Both proposals were proposed by Mr. Li Yuanzhi of the Taiwan Open Water Alliance. In April 2022, "[Articles 36 and 60 of the Development and Tourism Regulations were repealed, and real open water recreational activities](https://join.gov.tw/idea/detail) /87629654-2f3f-4660-9d2e-1321abcfef52)" and in june 2022 "[please review the opening of public facilities such as park waters, reservoirs, fishing ports, encourage all people to enjoy water and conduct water safety education, and comprehensively improve the water quality of the chinese people](https ://join.gov.tw/idea/detail/9a4e5d11-e7c6-45ef-8510-b7c8f35d064a)” was held to discuss not only the policy aspect, but also the actual implementation aspect of each water area. 
+Recently, the Join platform has two co-signatures on open water issues, which have been voted and passed, and a collaboration meeting will be held. Both proposals were proposed by Mr. Li Yuanzhi of the Taiwan Open Water Alliance. In April 2022, "[Articles 36 and 60 of the Development and Tourism Regulations were repealed, and real open water recreational activities](https://join.gov.tw/idea/detail/87629654-2f3f-4660-9d2e-1321abcfef52)" and in june 2022 "[please review the opening of public facilities such as park waters, reservoirs, fishing ports, encourage all people to enjoy water and conduct water safety education, and comprehensively improve the water quality for citizens](https://join.gov.tw/idea/detail/9a4e5d11-e7c6-45ef-8510-b7c8f35d064a)” was held to discuss not only the policy aspect, but also the actual implementation aspect of each water area. 
 
 [The first collaboration meeting](https://cm.pdis.nat.gov.tw/111/) was held at the Yilan Waiao Visitor Center. We invited multiple stakeholders, including relevant industry players and players. , scholars and experts, and management parties such as the National Park Management Office, the National Scenic Area Management Office, the Yilan County Government, the New Taipei City Government, and the Kaohsiung City Government, so that everyone from the central and local governments can communicate and discuss at the same table. Participating people raised questions and feelings to the management unit on the spot, and the Tourism Bureau of the Ministry of Communications also expressed the position of "open principle and exception management", hoping that individual management units can improve the current restrictions on the use of the public. We took stock of the needs of all parties at the end of the meeting, discussed possible solutions and dilemmas, and in the process of collaboration, let the open waters move forward little by little. 
 
