--- a/_i18n/en/_posts/2022-03-02-共創涵融的「多元宇宙」.md
+++ b/_i18n/en/_posts/2022-03-02-共創涵融的「多元宇宙」.md
@@ -29,7 +29,7 @@ If you agree with someone else's speech, you can like it. The more likes you hav
 
 Taiwan model, let the whole world see the results that "co-creation" can achieve. In the past two years, we have been successful in epidemic prevention, including the "Mask Supply and Demand Platform" and the "1922 SMS" contact tracing system, which have designed a unique global epidemic prevention mechanism through cross-departmental cooperation.
 
-The Presidential Hakactho, now in the fifth year, is attended by thousands of social entrepreneurs, grass-roots civil servants, and teams from all over the world every time. 
+The Presidential Hackathon, now in the fifth year, is attended by thousands of social entrepreneurs, grass-roots civil servants, and teams from all over the world every time. 
 
 From the government, the private sector to the civil society, the partnership formed by countless "microcosms" through online and offline mechanisms, is a model of the Plurality. 
 
