--- a/_i18n/en/_posts/2022-07-28-未來網際網路宣言-如何實現.md
+++ b/_i18n/en/_posts/2022-07-28-未來網際網路宣言-如何實現.md
@@ -1,57 +1,43 @@
 ---
   layout: "post"
-  title: "How the Future Internet Manifesto Works"
-  excerpt: "With resilience building and open thinking, we will usher in the best era."
+  title: "Realizing the «Declaration for the Future of the Internet»"
+  excerpt: "With democratic resilience and open innovation, we will usher in the best of times."
   image: "/assets/images/234696ec-cdbf-4eff-9bbf-a5317e872169.jpg"
-  author: "唐鳳、彭筱婷"
+  author: "Audrey Tang, Sheau-Tyng Peng"
   category: "blog"
   tags: 
-    - "開放政府"
-    - "社會創新"
+    - "Open Government"
+    - "Social Innovation"
 ---
 
+As the digital world readies for the golden age of web3, the opening line of "A Tale of Two Cities" by Charles Dickens rings more true today than at any time in the classic novel's 160-year exisitence: "It was the best of times, it was the worst of times." 
 
- "It was the best of times, and it was the worst of times." Dickens's "A Tale of Two Cities" begins with this passage, which has been passed down for nearly two hundred years and is still frequently quoted. In the face of the digital world that is about to enter the web3, this is the most appropriate description. 
+Case in point is the Internet. It holds such a positon of importance that many compare it to the human body's circulatory system. Experiences connected by hyperlinks transcending race, gender and status are instantly pumped around the world, enabling equal access to common resources and services. But this beautiful, essential life force is not without an all-too-real dark side.
 
-Through the Internet, the life experience between people constantly transcends race, gender, status, and is connected by hyperlinks, so that everyone can access common resources and services. 
+User communities holding specific values easily find one another and form digital settlements following the convenience of transnational platforms. Studies show they soon engage in patterns of behavior intensifying confrontation and rivalry. The power asymmetry brought about by information centralization also leads to concerns of surveillance by the state and other government actors. At the same time, totalitarian regimes are taking the opportunity to redefine democratic freedom as "democracy under regulation" and "freedom within walls," twisting the Internet into a stick that controls others and points at every corner.
 
-The Internet has become the bloodline connecting the world. The shadows that come with the light also bring great worries. 
+This is essentially a Battle of Helm's Deep between "digital totalitarianism" and "digital democracy". As the global democratic camp strives to turn back the tide of centralization and polarization, passive is turned into active and a new model of governance created.
 
- Community of users who believe in specific values find each other and form digital settlements based on the convenience of transnational platforms, but they are often involved in behavior patterns that intensify confrontation and distinguish between enemy and self; the power asymmetry brought about by information concentration , but also raised concerns about centralized monitoring. At the same time, totalitarian regimes also took the opportunity to redefine democratic freedom as "democracy under regulation" and "freedom within walls", twisting the Internet into a stick for controlling others, pointing at every corner. 
+A bright and shining example involves pandemic management over the past two years. The "Mask Map" at the onset of COVID-19 centered on a government-released application programming interface (API) providing real-time stock information at pharmacies. Complementary measures included g0v civic technology community using the open API of the National Health Insurance Administration to create hundreds of applications. This cutting-edge approach relieved people's anxiety and facilitated a good cycle of "protecting Taiwan and helping the world."
 
-#### Civil community power drives a new model of governance
+Similarly, the need to record contact information when entering and leaving public places enabled the "1922 SMS Contact Tracing" to be developed and deployed in the shortest time possible. This fast, installation-free design also emerged from the g0v community. Completing contact tracing registration was silky smooth and also took into account privacy -- anyone can check whether they have been queried by contact tracing personnel in the past 28 days by entering a registered mobile phone number.
 
-At this moment, it is the battle of Helm's Deep of "digital totalitarianism" and "digital democracy". As the global democratic camp struggles to resist the invasion of centralization and polarization, we have turned passive into active and created a new model of governance. 
+These changes were ushered in with a decisive start via the 318 Movement in 2014. The world saw firsthand a prototype of digital democracy: Effective, direct actions made under the auspices of professional guidance and augmented civic technology. After the movement achieved its initial aims, the Executive Yuan invited the civic community to set up various platforms allowing the public to participate directly and assume the role of a force for innovation in policymaking.
 
- The most widely known is the results of epidemic prevention in the past two years. Take the "mask map" at the beginning of the epidemic as an example. At that time, the government released an application programming interface (API) to provide real-time inventory of local pharmacies. Then, the g0v citizen technology community used the open API of the National Health Insurance Administration to create hundreds of applications. It not only relieves people's anxiety, but also promotes a good cycle of "protecting Taiwan and helping the world". 
+Since 2016, each ministry has set up an "open government liaison" as a window for interministerial cooperation and as a communication bridge between the public sector and the people. On "join.gov.tw", the online participation platform for public policy, anyone can initiate a proposal. And as long as more than 5,000 users second a proposal, the Open Government Liaison will invite stakeholders to hold cross-sector collaborative meetings to discuss ways of incorporating ideas into government decision-making. In this way, even members of the younger generation without the right to vote have the opportunity to develop entirely new policies.
 
-Similarly, the need to record contact information when entering and leaving public places allows the "1922 SMS Real Link System" to be developed and deployed in the shortest time. This fast, installation-free design also comes from the g0v community. Not only is it easy to complete real contact registration, but it also takes into account privacy - anyone can check whether they have been queried by epidemic investigators in the past 28 days by entering their mobile phone number. 
+In addition to making policy suggestions, the private sector directly participates in co-creation. The Presidential Hackathon, which is an important vehicle for advancing digital public construction, has been held for five consecutive years. It has welcomed thousands of social entrepreneurs, civil servants and teams from dozens of countries, with each edition seeing five outstanding teams selected and awarded by the president upon conclusion of the event. 
 
-These changes are the decisive start of the 318 Movement in 2014. We showed the world the prototype of digital democracy: effective direct action through professional guidance and the augmentation of civic technology. Therefore, after the March 18 Movement came to an end, the Executive Yuan actively invited the civic community to set up various platforms to allow the public to speak directly and become the driving force for policy innovation. 
+Taiwan's experience has shown that digital democracy is not a castle in the sky, but rather a kingdom of heaven. The crucial point is that governments must trust the people to present ideas and express opinions on policy reform as part and pacel of daily life. The beauty is that any country can adopt the same approach, make the government decision-making process transparent and use collaborative tools to assist, so scattered public opinion can be transformed into a continuous cycle of People-Public-Private partnerships (PPPP).
 
-#### The Key to Digital Democracy: Partnership for All
+What has been tried over the years in Taiwan is more than just a democratic experiment in a single country, but a common goal of global partners. In 2022, I signed the "Declaration for the Future of the Internet" with representatives of 60 countries, formally expanding PPPP as a shared value for democratic allies.
 
+In the declaration, countries with similar ideas jointly pledge to promote the openness and interoperability of the digital economy in a pluralistic and inclusive way, and to use a multistakeholder governance approach to build the Internet into a resilient structure strengthening mutual trust and protections of freedon and human rights.
 
+Simply put, the declaration emphasizes the multiparty connections of "networks," as well as the distributed structure of the "Internet", which is both decentralized and interdependent. It can be seen that the strategy for digital development is not to issue licenses or to supervise, but to construct a "democratic network" in the Internet to promote innovation based on shared values.
 
+The DIGI⁺ program of the Executive Yuan over the past six years has exactly the same intent as the declaration. DIGI stands for Digitization, Innovation, Governance and Inclusion. It lays the foundation for digital development, and integrates the spirit of diversity and integration. Improving the quality of digital services, promoting information security resilience and industrial development, and meeting the challenges of cross-border data governance, DIGI also includes Taiwan's 20 national languages as part of digital inclusion.
 
- A communication bridge for the public; on the public policy online participation platform "join.gov.tw", anyone can initiate a proposal. As long as more than 5,000 people support the proposal, the Open Government Liaison will invite multiple stakeholders to hold a cross-border event. Sector collaboration meetings to explore how these ideas can be incorporated into government decision-making. In this way, even young people who do not have the right to vote have the opportunity to develop entirely new policies. 
+Starting this year, we formally proposed the vision for the next phase: "Plurality". Just like the Internet, which is composed of diverse network topologies, communities of all sizes can set up unique spaces and initiate action agendas, eliminating the restrictions of venues and time, allowing multiple choices and solutions to coexist harmoniously in creating mutually suitable interactive formats.
 
-In addition to making policy suggestions, the private sector also directly participates in co-creation. The Presidents Cup Hackathon has been held for five consecutive years. Thousands of social entrepreneurs, government colleagues, and teams from dozens of countries participated each time. Every year, five outstanding teams will be selected and awarded by the President. Received government support in 2018 and made substantial contributions to digital public construction. 
-
-Taiwan's experience has proved that digital democracy is not a castle in the air. The point is this: Governments must trust their people to present ideas and express opinions on policy reforms at any time in their daily lives. And any country can adopt the same approach, make the government decision-making process transparent to the public, and then use collaborative tools to assist, so that the scattered public opinion can be transformed into an endless "people-Public-partnership" (People-Public-Partnership). Private partnerships). 
-
-#### A digital development strategy centered on the construction of a "democratic network"
-
- Our attempts over the years are not only a democratic experiment in a single country, but also a common goal of global partners. In 2022, I signed the Future Internet Manifesto with representatives of sixty countries, formally expanding Citizens Partnership as a shared value of democratic allies. 
-
-In the Declaration, countries with similar ideas jointly pledge to promote the openness and interoperability of the digital economy in a pluralistic and inclusive way; and use a multi-stakeholder governance approach to build the Internet into a place that protects human rights and freedoms and resilience building of mutual trust. 
-
- To put it simply, this manifesto not only emphasizes the multi-party connection of the "Internet", but more importantly, the decentralized structure of the "Internet", which is both decentralized and interdependent - it can be seen that , The strategy of digital development is not to issue licenses or supervise and control, but to build a "democratic network" in the Internet to promote innovation based on common values. 
-
-#### Ushering in the best era with resilience building and open thinking 
-
- The DIGI⁺ plan of the Executive Yuan over the past six years is also exactly the same as the declaration. DIGI stands for Digitization, Innovation, Governance, and Inclusion, which not only lays the foundation for digital development, but also includes the spirit of diversity and integration, allowing us to improve the quality of digital services, While promoting information security resilience and industrial development, and meeting the challenges of cross-border data governance, it can also include my country's 20 national languages as part of digital inclusion. 
-
-Starting this year, we formally put forward our vision for the next stage: "Plurality". Just like the Internet is composed of multiple network topologies, communities of all sizes can set up their own space and initiate what they want to do, transcending the limitations of venues and time, allowing multiple choices and solutions to coexist harmoniously and together. Create interactive patterns that work for each other. 
-
-As an extension of a multiverse society, the various groups in the multiverse remain both autonomous and interconnected. The soon-to-be-established Digital Development Department will also, through resilience building and open thinking, expand the multiverse of "co-creation" with the same vision and "integration" of the feelings of all parties, so that the best era can be achieved through the "integration" Taiwan model. advent. 
+As an extension of a diverse society, the various groups in the multiverse remain autonomous and interconnected. The soon-to-be-established Ministry of Digital Affairs, or moda, will also expand the multiverse by "co-creating" the common vision and "integrating" the feelings of all parties through resilience building and open thinking. There is no question the best of times can be experienced through Taiwan's model of "inclusive co-creation." 
