--- a/_i18n/en/_posts/2022-07-28-好的討論-未必要「開麥說話」.md
+++ b/_i18n/en/_posts/2022-07-28-好的討論-未必要「開麥說話」.md
@@ -1,34 +1,33 @@
 ---
   layout: "post"
-  title: "For a good discussion, there is no need to \"talk over the microphone\""
+  title: "For a good discussion, there is no need to \"talk over the microphone\"."
   excerpt: "Let different life experiences be equally reflected in the meeting"
   image: "/assets/imgs/woman-gfe6d9bae1_1280.jpg"
-  author: "唐鳳、許恩恩"
+  author: "Audrey Tang, En-en Hsu"
   category: "blog"
   tags: 
-    - "開放政府"
-    - "青年參與"
+    - "Open Government"
+    - "Youth Participation"
 ---
 
-
 Video conferences have become the daily life of modern people; for inclusive discussions, there is no need to open a microphone to speak. Through good guidance and typing-assisted dialogue, discussion participants can express themselves more freely. 
- 
- The Let’s Talk (Youth Good Governance) program organized by the Ministry of Education every year, in the face of the epidemic, held an experimental activity with real-time text-assisted discussion, and asked the "Taiwan Labor Front" to invite young people to talk about mental health issues. 
- 
+
+The "Let’s Talk" (青年好政) program organized by the Ministry of Education every year, in the face of the epidemic, held an experimental activity with real-time text-assisted discussion, and asked the "Taiwan Labor Front" to invite young people to talk about mental health issues. 
+
 In that meeting, there were a lot of flashing avatars in the chat room and the file interface, which didn't need to be noisy, but also presented a lively atmosphere. 
- 
+
 Past deliberations emphasized the presence of people together, and therefore focused on sitting around a table and talking, one after another, voices and expressions. Although this format can make the atmosphere lively, it sometimes crowds out friends who are not good at "speaking out". Similarly, pressing the microphone icon in a chat room, or being asked to turn on the camera, is also a psychological burden for some people. 
- 
+
 Let's Talk's "Online Review Demonstration Field" maintains the norms of pre-registration and named participation, but in form, it allows everyone to freely choose whether to "open the microphone" to speak. 
- 
- Some people feel that voice dialogue requires a two-way sense of feedback, so that they can talk freely; some people feel that they need to type text one after another, so they don’t have to worry about misunderstandings caused by tone and wording. 
- 
- During the meeting, someone added a sentence before the speech paragraph, "I'm sorry, I type slowly, so I dare to post it after the whole paragraph is finished." Even if you share the details of multiple personal experiences, it will not occupy the overall meeting. Time, on the contrary, makes everyone more willing to understand each other. 
- 
+
+Some people feel that voice dialogue requires a two-way sense of feedback, so that they can talk freely; some people feel that they need to type text one after another, so they don’t have to worry about misunderstandings caused by tone and wording. 
+
+During the meeting, someone added a sentence before the speech paragraph, "I'm sorry, I type slowly, so I dare to post it after the whole paragraph is finished." Even if you share the details of multiple personal experiences, it will not occupy the overall meeting. Time, on the contrary, makes everyone more willing to understand each other. 
+
 At the same time, many people responded by typing "+1" under the speech paragraphs of other participants, just like the likes and comments on social media. These interactions are not pre-designed discussion guidelines, but spontaneous communication languages in "semi-synchronized" collaborative discussions. 
- 
+
 In the past, physical events created appropriate communication by planning food and beverage links and space movements; when turning to online discussions, they could only face the screen individually, and "text" became a buffer, just like a traditional meeting The speech list; the real-time presentation of the co-written document adds to the rhythm of the dialogue. 
- 
- Most importantly, this "semi-synchronized" discussion method allows participants to "tell the story" at their preferred rhythm. Youth issues are often related to their own experiences. Diverse expression methods not only allow more viewpoints to emerge, but also reduce the impact of oral expression ability, so that different life experiences can be equally reflected in meetings. 
- 
+
+Most importantly, this "semi-synchronized" discussion method allows participants to "tell the story" at their preferred rhythm. Youth issues are often related to their own experiences. Diverse expression methods not only allow more viewpoints to emerge, but also reduce the impact of oral expression ability, so that different life experiences can be equally reflected in meetings. 
+
 Because it was held online, not only the voices of young people in northern and southern Taiwan, but also Berlin students stayed up all night to participate in the whole process. You can share your personal experience with peace of mind, which is a kind of “de-edge”. I saw empathy in this discussion.”
