--- a/_posts/2022-07-28-好的討論-未必要「開麥說話」.md
+++ b/_posts/2022-07-28-好的討論-未必要「開麥說話」.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "好的討論，未必要「開麥說話」"
-excerpt: "讓不同生命經驗，都能在會議上平等體現"
+excerpt: "讓不同生命經驗，都能在會議上平等體現。"
 image: "/assets/imgs/woman-gfe6d9bae1_1280.jpg"
 author: 唐鳳、許恩恩
 category: blog
