--- a/_i18n/en/_posts/2022-07-28-好的討論-未必要「開麥說話」.md
+++ b/_i18n/en/_posts/2022-07-28-好的討論-未必要「開麥說話」.md
@@ -1,7 +1,7 @@
 ---
   layout: "post"
   title: "For a good discussion, there is no need to \"talk over the microphone\"."
-  excerpt: "Let different life experiences be equally reflected in the meeting"
+  excerpt: "Let different life experiences be equally reflected in the meeting."
   image: "/assets/imgs/woman-gfe6d9bae1_1280.jpg"
   author: "Audrey Tang, En-en Hsu"
   category: "blog"
@@ -30,4 +30,4 @@ In the past, physical events created appropriate communication by planning food 
 
 Most importantly, this "semi-synchronized" discussion method allows participants to "tell the story" at their preferred rhythm. Youth issues are often related to their own experiences. Diverse expression methods not only allow more viewpoints to emerge, but also reduce the impact of oral expression ability, so that different life experiences can be equally reflected in meetings. 
 
-Because it was held online, not only the voices of young people in northern and southern Taiwan, but also Berlin students stayed up all night to participate in the whole process. You can share your personal experience with peace of mind, which is a kind of “de-edge”. I saw empathy in this discussion.”
+Because it was held online, we included not only the voices of young people in northern and southern Taiwan, but also a student from Berlin stayed up all night to participate in the whole process. The student remarked after the meeting: "You can share your personal experience with peace of mind, which is a kind of “de-edge”. I saw empathy in this discussion.”
